footer Alignment solved Nav Problem Solved And li Problem Skoved

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -123,7 +123,7 @@ body{
 .menu>ol>li:hover{
     color: rgb(245, 117, 32);
     border-left: 5px solid rgb(245, 117, 32);
-    padding-left: 5px;
+    padding-left: 0px;
 }
 .menu>ol{
     align-items: center;
@@ -212,10 +212,32 @@ body{
 }
 .list{
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
 }
 .logo2>p{
     margin-top: 10px;
+}
+.list>ul{
+    padding-left: 0;
+    margin-top: 10px;
+}
+
+
+    
+@media screen and (max-width: 600px){
+    .right{
+        display: block;
+    }
+}
+@media screen and (max-width: 800px){
+    .right{
+        display: block;
+    }
+}
+@media screen and (max-width: 900px){
+    .right{
+        display: block;
+    }
 }
 
 
